manifests/01-network-policies/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: domain-payments
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-payment-gateway-to-processor
  namespace: domain-payments
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: transaction-processor
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels: {kubernetes.io/metadata.name: domain-platform}
      podSelector:
        matchLabels: {app.kubernetes.io/name: payment-gateway}
    ports: [{protocol: TCP, port: 8443}]
  egress:
  - to:
    - namespaceSelector:
        matchLabels: {kubernetes.io/metadata.name: domain-risk}
      podSelector:
        matchLabels: {app.kubernetes.io/name: fraud-detection-engine}
    ports: [{protocol: TCP, port: 9443}]
